<resources>
    <string name="app_name">COMP 2000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_bookings">View Bookings</string>
    <string name="menu">Menu</string>
    <string name="book_a_table">Book a Table</string>
    <string name="back_button_description">Back</string>
    <string name="staff_reservations">Staff Reservations</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string-array name="Table5">
        <item>Date</item>
        <item>Time</item>
        <item>Name</item>
        <item>Phone</item>
        <item>Party</item>
        <item>Notes</item>
    </string-array>

    <string-array name="GuestBookingDate">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Friday, 24th May</item>
        <item>Saturday, 25th May</item>
    </string-array>

    <string-array name="GuestBookingParty">
        <item>1 Person</item>
        <item>2 People</item>
        <item>3 People</item>
        <item>4 People</item>
        <item>5 People</item>
        <item>6 People</item>
        <item>7 People</item>
        <item>8+ People</item>
    </string-array>

    <string-array name="GuestBookingTime">
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
    </string-array>
</resources>